--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://zeus.grisk.online/eureka/
----
-spring:
-  profiles: heroku
-eureka:
   instance:
     hostname: hermes.herokuapp.com
-    nonSecurePort: 80
+    status-page-url-path: https://${eureka.instance.hostname}/info
+    health-check-url-path: https://${eureka.instance.hostname}/health
+    home-page-url-path: https://${eureka.instance.hostname}/
