--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 			<artifactId>mailjet-client</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
