--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- End Document API -->
     </dependencies>
 
