--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,8 @@
                 <version>0.7.9</version>
                 <configuration>
                     <excludes>
-                        <exclude>online/grisk/hermes/integration/gateway/*</exclude>
+                        <exclude>com/sivalabs/jblogger/entities/*</exclude>
+                        <exclude>com/sivalabs/jblogger/*Application</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -155,6 +156,22 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
+                        <configuration>
+                            <rules>
+                                <!-- implementation is needed only for Maven 2 -->
+                                <rule implementation="org.jacoco.maven.RuleConfiguration">
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <!-- implementation is needed only for Maven 2 -->
+                                        <limit implementation="org.jacoco.report.check.Limit">
+                                            <counter>COMPLEXITY</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.60</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
